implement workout management API with CRUD operations and connect to MongoDB

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGO_URI=mongodb+srv://jestrodiaz006:J3sTr0D!@z06@dsafinalproject.n5y2w.mongodb.net/?retryWrites=true&w=majority&appName=DSAFinalProject
+MONGO_URI=mongodb+srv://jestrodiaz:J3sTr0D%21%40z06@dsafinalproject.n5y2w.mongodb.net/?retryWrites=true&w=majority&appName=DSAFinalProject
